add: переход на экран для конвертации валюты.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,17 @@
         android:id="@+id/mainFragment"
         android:name="com.katerinavp.currency.view.fragments.CurrencyFragment"
         android:label="SheetCurrencyFragment"
-        tools:layout="@layout/fragment_currency"/>
+        tools:layout="@layout/fragment_currency">
+    <action
+        android:id="@+id/action_navigation_colleagueFragment"
+        app:destination="@id/converterFragment"
+        />
+    </fragment>
+
+
+    <fragment
+        android:id="@+id/converterFragment"
+        android:name="com.katerinavp.currency.view.fragments.ConverterFragment"
+        android:label="AbsencesColleaguesFragment"
+        tools:layout="@layout/fragment_converter"/>
 </navigation>
