--- a/app/src/main/res/layout/fragment_currency.xml
+++ b/app/src/main/res/layout/fragment_currency.xml
@@ -1,46 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="7">
+    android:background="@color/base"
+    tools:context=".MainActivity">
+
+    <include
+        android:id="@+id/appBar"
+        layout="@layout/layout_app_bar_search_main" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.2"
+        android:layout_height="5dp"
         android:indeterminate="true"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
-    <LinearLayout
-        android:id="@+id/dateLayout"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:orientation="horizontal"
-        android:paddingStart="18dp">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/main_space"
+        android:layout_marginBottom="@dimen/bottom_menu"
+        android:paddingTop="@dimen/app_bar">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingTop="@dimen/app_bar_padding">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/main_space" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/main_space" />
 
         <TextView
-            android:id="@+id/textDate"
+            android:id="@+id/dateTxt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Текущая дата" />
+            android:text="@string/current_date"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/date"
+            app:layout_constraintStart_toStartOf="@id/start"
+           />
 
         <TextView
-            android:id="@+id/inputDate"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:paddingEnd="42dp"
-            tools:text="20.11.2021" />
-
-    </LinearLayout>
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="20.11.2021"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/end"
+            app:layout_constraintStart_toEndOf="@id/dateTxt"
+            />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -48,27 +76,36 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_weight="5"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        app:layout_constraintTop_toBottomOf="@id/date"
         tools:listitem="@layout/recyclerview_item" />
 
-    <Button
-        android:id="@+id/btnUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_weight="0.5"
-        android:layout_marginBottom="8dp"
-        android:text="Загрузить" />
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/btnUpdate"-->
+<!--        style="@style/Button"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="@dimen/main_space"-->
+<!--        android:text="Загрузить"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/end"-->
+<!--        app:layout_constraintStart_toStartOf="@id/start"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/recyclerView"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/btnConvert"/>-->
 
-    <Button
-        android:id="@+id/btnConvert"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_weight="0.5"
-        android:text="Конвертировать" />
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/btnConvert"-->
+<!--        style="@style/Button"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Конвертировать"-->
+<!--        android:layout_marginTop="@dimen/half_space"-->
+<!--        android:layout_marginBottom="@dimen/half_space"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/end"-->
+<!--        app:layout_constraintStart_toStartOf="@id/start"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/btnUpdate"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
