--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     app:startDestination="@id/nav_currency">
     <fragment
         android:id="@+id/nav_currency"
-        android:name="com.katerinavp.currency.view.fragments.CurrencyFragment"
+        android:name="com.katerinavp.currencies_screen_impl.fragments.CurrencyFragment"
         android:label="SheetCurrencyFragment"
         tools:layout="@layout/fragment_currency">
 <!--    <action-->
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_exchange"
-        android:name="com.katerinavp.currency.view.fragments.ConverterFragment"
+        android:name="com.katerinavp.converter_screen_impl.fragments.ConverterFragment"
         android:label="AbsencesColleaguesFragment"
         tools:layout="@layout/fragment_converter"/>
 </navigation>
