--- a/currencies_screen_impl/src/main/res/layout/fragment_currency.xml
+++ b/currencies_screen_impl/src/main/res/layout/fragment_currency.xml
@@ -4,50 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/base">
+    android:background="@color/base"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/appBar"
         layout="@layout/layout_app_bar_search_main" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:indeterminate="true"
-        android:visibility="invisible"
-        tools:visibility="visible" />
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/main_space"
-        android:layout_marginBottom="@dimen/bottom_menu"
-        android:paddingTop="@dimen/app_bar">
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingTop="@dimen/app_bar_padding">
+        android:paddingTop="@dimen/app_bar_search">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/main_space" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/main_space" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/main_space" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/main_space" />
 
         <TextView
             android:id="@+id/dateTxt"
@@ -69,42 +58,50 @@
             app:layout_constraintStart_toEndOf="@id/dateTxt"
             />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
-        app:layout_constraintTop_toBottomOf="@id/date"
-        tools:listitem="@layout/recyclerview_item" />
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/userBarrier"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="date,dateTxt" />
 
-<!--    <androidx.appcompat.widget.AppCompatButton-->
-<!--        android:id="@+id/btnUpdate"-->
-<!--        style="@style/Button"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="@dimen/main_space"-->
-<!--        android:text="Загрузить"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/end"-->
-<!--        app:layout_constraintStart_toStartOf="@id/start"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/recyclerView"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/btnConvert"/>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/double_space"
+            android:layout_marginBottom="8dp"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            app:layout_constraintTop_toBottomOf="@id/userBarrier"
+            tools:listitem="@layout/recyclerview_item" />
 
-<!--        <androidx.appcompat.widget.AppCompatButton-->
-<!--        android:id="@+id/btnConvert"-->
-<!--        style="@style/Button"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Конвертировать"-->
-<!--        android:layout_marginTop="@dimen/half_space"-->
-<!--        android:layout_marginBottom="@dimen/half_space"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/end"-->
-<!--        app:layout_constraintStart_toStartOf="@id/start"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/btnUpdate"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
+
+        <!--    <androidx.appcompat.widget.AppCompatButton-->
+        <!--        android:id="@+id/btnUpdate"-->
+        <!--        style="@style/Button"-->
+        <!--        android:layout_width="0dp"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginTop="@dimen/main_space"-->
+        <!--        android:text="Загрузить"-->
+        <!--        app:layout_constraintEnd_toEndOf="@id/end"-->
+        <!--        app:layout_constraintStart_toStartOf="@id/start"-->
+        <!--        app:layout_constraintTop_toBottomOf="@id/recyclerView"-->
+        <!--        app:layout_constraintBottom_toTopOf="@id/btnConvert"/>-->
+
+        <!--        <androidx.appcompat.widget.AppCompatButton-->
+        <!--        android:id="@+id/btnConvert"-->
+        <!--        style="@style/Button"-->
+        <!--        android:layout_width="0dp"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:text="Конвертировать"-->
+        <!--        android:layout_marginTop="@dimen/half_space"-->
+        <!--        android:layout_marginBottom="@dimen/half_space"-->
+        <!--        app:layout_constraintEnd_toEndOf="@id/end"-->
+        <!--        app:layout_constraintStart_toStartOf="@id/start"-->
+        <!--        app:layout_constraintTop_toBottomOf="@id/btnUpdate"-->
+        <!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
