feat: добавлен график

--- a/currency_api/src/main/res/values/dimens.xml
+++ b/currency_api/src/main/res/values/dimens.xml
@@ -14,5 +14,13 @@
     <dimen name="app_bar">96dp</dimen>
     <dimen name="text_large">16sp</dimen>
 
+    <dimen name="minLinearChartHeight">400dp</dimen>
+    <dimen name="minLinearChartWidth">400dp</dimen>
+
+
+    <dimen name="rowSize">50dp</dimen>
+
+    <dimen name="yAxisTextHeight">16dp</dimen>
+
     <dimen name="button_cornets">25dp</dimen>
 </resources>
