--- a/currencies_screen_impl/src/main/res/layout/fragment_graphic.xml
+++ b/currencies_screen_impl/src/main/res/layout/fragment_graphic.xml
@@ -18,8 +18,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/base_dark"
-            android:paddingTop="@dimen/status_bar">
+            android:background="@color/base_dark">
 
             <TextView
                 android:id="@+id/toolTitle"
