--- a/currencies_screen_impl/src/main/res/layout/layout_app_bar_search_main.xml
+++ b/currencies_screen_impl/src/main/res/layout/layout_app_bar_search_main.xml
@@ -13,8 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/base_dark"
-        android:paddingTop="@dimen/status_bar">
+        android:background="@color/base_dark">
 
         <TextView
             android:id="@+id/toolTitle"
