--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,5 +33,10 @@
         android:name="com.katerinavp.currencies_screen_impl.fragments.GraphicFragment"
         android:label="GraphicFragment"
         tools:layout="@layout/fragment_graphic"/>
+    <fragment
+        android:id="@+id/nav_favourites"
+        android:name="com.katerinavp.favorites_screen_impl.fragments.FavoritesFragment"
+        android:label="FavoritesFragment"
+        tools:layout="@layout/fragment_favorites"/>
 
 </navigation>
