--- a/currencies_screen_impl/src/main/res/layout/recyclerview_item.xml
+++ b/currencies_screen_impl/src/main/res/layout/recyclerview_item.xml
@@ -9,17 +9,18 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="4dp"
     app:cardBackgroundColor="@color/gray"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="@dimen/selector_cornets"
     app:cardElevation="2dp">
 
     <com.katerinavp.core_ui.components.CurrencyView
         android:id="@+id/currency_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_currency_item"
         android:padding="@dimen/half_space"
         app:favorites="@drawable/baseline_favorite_border_24"
         app:textMargin="@dimen/main_space"
-        tools:ticker="EUR"
         tools:name="Евро"
+        tools:ticker="EUR"
         tools:value="105.60" />
 </androidx.cardview.widget.CardView>
