--- a/currency_api/src/main/res/values/themes.xml
+++ b/currency_api/src/main/res/values/themes.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Currency" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
-
+    <style name="Theme.Currency" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <item name="colorPrimary">@color/base_dark</item>
+    <item name="colorPrimaryDark">@color/base_dark</item>
+    <item name="colorAccent">@color/base_dark</item>
+</style>
 </resources>
