--- a/core_ui/src/main/res/values/values.xml
+++ b/core_ui/src/main/res/values/values.xml
@@ -3,4 +3,8 @@
     <item name="name" type="id" />
     <item name="value" type="id" />
     <item name="favorites" type="id" />
+
+    <string name="font_family_light" translatable="false">sans-serif-light</string>
+    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
+    <string name="font_family_regular" translatable="false">sans-serif</string>
 </resources>
